Version 1.0.1
=============

- Fixed rope transparency.
- Fixed incorrect polerope grabbing.
- Fixed camera behaviour with pushable blocks.
- Fixed minecart unduck on inclines.
- Fixed quadbike dismount with jump key and allow to shoot big gun with action key.
- Prevent title music audio from starting in a random place.

Version 1.0
===========

First beta release.