@@ -803,7 +803,10 @@ void GuiController::HandleDisplaySettingsInput(bool pause)
 
 		case 4:
 			SoundEffect(SFX_TR4_MENU_CHOOSE, nullptr, SoundEnvironment::Always);
-			CurrentSettings.conf.EnableVolumetricFog = !CurrentSettings.conf.EnableVolumetricFog;
+			if (CurrentSettings.conf.Antialiasing == AntialiasingMode::None)
+				CurrentSettings.conf.Antialiasing = AntialiasingMode::High;
+			else
+				CurrentSettings.conf.Antialiasing = AntialiasingMode(int(CurrentSettings.conf.Antialiasing) - 1);
 			break;
 		}
 	}
@@ -838,7 +841,10 @@ void GuiController::HandleDisplaySettingsInput(bool pause)
 
 		case 4:
 			SoundEffect(SFX_TR4_MENU_CHOOSE, nullptr, SoundEnvironment::Always);
-			CurrentSettings.conf.EnableVolumetricFog = !CurrentSettings.conf.EnableVolumetricFog;
+			if (CurrentSettings.conf.Antialiasing == AntialiasingMode::High)
+				CurrentSettings.conf.Antialiasing = AntialiasingMode::None;
+			else
+				CurrentSettings.conf.Antialiasing = AntialiasingMode(int(CurrentSettings.conf.Antialiasing) + 1);
 			break;
 		}
 	}
