@@ -4,4 +4,5 @@ struct alignas(16) CPostProcessBuffer
 	float ScreenFadeFactor;
 	int ViewportWidth;
 	int ViewportHeight;
+	int FXAA;
 };
